--- a/RumTime.xcodeproj/xcshareddata/xcschemes/RumTime.xcscheme
+++ b/RumTime.xcodeproj/xcshareddata/xcschemes/RumTime.xcscheme
@@ -33,6 +33,9 @@
             reference = "container:RumTime.xctestplan"
             default = "YES">
          </TestPlanReference>
+         <TestPlanReference
+            reference = "container:RumTimeUITests.xctestplan">
+         </TestPlanReference>
       </TestPlans>
       <Testables>
          <TestableReference
